updated data seeding

--- a/app/views/static_pages/api.html.erb
+++ b/app/views/static_pages/api.html.erb
@@ -29,14 +29,14 @@
             <td>POST</td>
             <td>http://sulcap.stanford.edu/publications</td>
             <td>Submit new hand-entered publication.</td>
-            <td>BibJSON for new record</td>
+            <td>BibJSON that was submitted for the new record</td>
 
           </tr>
           <tr>
             <td>PUT</td>
             <td>http://sulcap.stanford.edu/publications/{pubId}</td>
             <td>edit existing user-submitted record</td>
-            <td>updated record as BibJSON</td>
+            <td>BibJSON that was sumitted to update the record</td>
           </tr>
           <tr>
             <td>DELETE</td>
