--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,7 +2,7 @@
   <div class="navbar-inner">
     <div class="container">
       <nav class="brand">
-      <%= link_to image_tag("http://library.stanford.edu/sites/all/themes/sulair_framework/logo.png", alt: "SUL"), 'http://library.stanford.edu/' %>
+      <%= link_to image_tag("http://searchworks.stanford.edu/assets/sul_logo-a6d9d36714fe6ab9000d9b3b82b9e510.png", alt: "SUL"), 'http://library.stanford.edu/' %>
     </nav>
       <!-- <%= link_to "SUL Publications Server", '#', id: "logo" %> -->
      <!-- <nav>
