--- a/app/views/static_pages/api.html.erb
+++ b/app/views/static_pages/api.html.erb
@@ -1,75 +1,103 @@
 <div class="center hero-unit">
-  <h2>SUL Publications</h2>
-<hr/>
+  <h2>SUL Publication Resources</h2>
 
- <p>RESTful access to the consolidated Stanford publications database.  The  URIs accept and return data in BibJSON format. The version of BibJSON to return may be specified in the header; the latest version will be returned by default.
- </p>
 
- <p>The data is transferred as BibJSON and as such uses the BibTex field names where appropriate, custom fields otherwise.  Some of the custom fields refer to the 'document' and some to the 'publication' to differentiate between the specific document cited and the publication in which it appeared.  A journal article, for example, is a 'document' that appeared in a journal 'publication.'</p>
-<hr/>
+<p style="font-size:medium">RESTful access to the Stanford Libraries' consolidated publications database.</p>
 
-<table class="table table-striped">
-        <thead>
-          <tr>
-            <th>Verb</th>
-            <th>URI</th>
-            <th>Body</th>
-            <th>Returns</th>
-            <th>Sample</th>
-          </tr>
-        </thead>
+<hr style="color:#000;background-color:#000;border-color:#000"/>
+
+
+<h5 style="padding-bottom:10px;text-align:left;">http://sulcap.stanford.edu/publications/{pubId}</h5>
+<p class="sultext">View, update, or delete a single publication resource.</p>
+<table class="table table-striped">       
         <tbody>
           <tr>
-            <td>GET</td>
-            <td>http://sulcap.stanford.edu/publications/{pubId}</td>
-            <td>No Body. URI itself identifies record to return.</td>
-            <td>Single BibJSON record</td>
-            <td> <%= link_to "Output", sul_bib_api_samples_path + '/get_pub_out' %>  </td>
+            <td>HEAD</td>
+            <td>Returns same as GET, but without body.</td>            
           </tr>
           <tr>
-            <td>POST</td>
-            <td>http://sulcap.stanford.edu/publications</td>
-            <td>BibJSON for record(s) to create. </td>
-            <td>BibJSON that was submitted for the new record(s), with newly minted URI.  </td>
-            <td><%= link_to "Input", sul_bib_api_samples_path + '/post_pub_in' %> <%= link_to "Output", sul_bib_api_samples_path + '/post_pub_out' %>  </td>
-         
+            <td>OPTIONS</td>
+            <td>Lists available methods.</td>            
+          </tr>
+          <tr>
+            <td>GET</td>
+            <td>Returns BibJSON record for the publication.</td>
           </tr>
           <tr>
             <td>PUT</td>
-            <td>http://sulcap.stanford.edu/publications/{pubId}</td>
-            <td>BibJSON to replace existing pub record. </td>
-            <td>BibJSON that was submitted to update the record.</td>
-            <td><%= link_to "Input", sul_bib_api_samples_path + '/put_pub_in' %> <%= link_to "Output", sul_bib_api_samples_path + '/put_pub_out' %>  </td>
-         
+            <td>Updates publication record.</td>
           </tr>
           <tr>
             <td>DELETE</td>
-            <td>http://sulcap.stanford.edu/publications/{pubId}</td>
-            <td>No body.  URI itself identifies record to delete.</td>
-            <td>BibJSON for deleted record.  </td>
-            <td><%= link_to "Output", sul_bib_api_samples_path + '/delete_pub_out' %>  </td>
-         
+            <td>Deletes publication record.</td>
+          </tr>
+          <tbody>
+</table>
+<p class="sultext"><%= link_to "See Full Spec", static_pages_pubapi_path %></p>
+<hr style="color:#000;background-color:#000;border-color:#000"/>
+     
+ 
+<h5 style="padding-bottom:10px;text-align:left">http://sulcap.stanford.edu/publications</h5>
+<p class="sultext">Create one or more publication resources.</p>
+<table class="table table-striped">       
+        <tbody>
+          <tr>
+            <td>OPTIONS</td>
+            <td>Lists available methods.</td>            
+          </tr>
+          <tr>
+            <td>POST</td>
+            <td>Creates one or more new publication resources from the BibJSON or BibTeX included in the posted body.</td>
+          </tr>
+          <tbody>
+</table>
+<p class="sultext"><%= link_to "See Full Spec", static_pages_pubsapi_path %></p>
+<hr style="color:#000;background-color:#000;border-color:#000"/>
+
+
+<h5 style="padding-bottom:10px;text-align:left">http://sulcap.stanford.edu/publications?population={popId}&changedSince={YYYY-MM-DDTHH:MM:SSZ}</h5>
+<p class="sultext">Returns all publications created or modified since the given date, for the given population.</p>
+<table class="table table-striped">       
+        <tbody>
+          <tr>
+            <td>HEAD</td>
+            <td>Returns same as GET, but without body.</td>            
+          </tr>
+          <tr>
+            <td>OPTIONS</td>
+            <td>Lists available methods.</td>            
           </tr>
           <tr>
             <td>GET</td>
-            <td>http://sulcap.stanford.edu/publications?population={popId}&changedSince={YYYY-MM-DDTHH:MM:SSZ} <br/></td>
-            <td>No Body</td>
-            <td>BibJSON collection.</td>
-            <td><%= link_to "Output", sul_bib_api_samples_path + '/get_pubs_out' %>  </td>
-         
+            <td>Returns BibJSON record for the publication.</td>
+          </tr>
+          <tbody>
+</table>
+<p class="sultext"><%= link_to "See Full Spec", static_pages_pollapi_path %></p>
+<hr style="color:#000;background-color:#000;border-color:#000"/>
+
+
+<h5 style="padding-bottom:10px;text-align:left">http://sulcap.stanford.edu/sourcelookup?lastname={}&firstname={}&middlename={}&year={}&title={}&source={}</h5>
+<p class="sultext">Returns all matching publications from remote sources (ScienceWire only initially.)</p>
+<table class="table table-striped">       
+        <tbody>
+          <tr>
+            <td>HEAD</td>
+            <td>Returns same as GET, but without body.</td>            
+          </tr>
+          <tr>
+            <td>OPTIONS</td>
+            <td>Lists available methods.</td>            
           </tr>
           <tr>
             <td>GET</td>
-            <td>http://sulcap.stanford.edu/sourcelookup?lastname={}&firstname={}&middlename={}&year={}&title={}&source={}</td>
-            <td>No body.  Query encoded as URI params.</td>
-            <td>Potentially matching pubs found in source, as BibJSON.</td>
-            <td> <%= link_to "Output", sul_bib_api_samples_path + '/get_source_lookup_out' %>  </td>
-         
+            <td>Returns potential matches as BibJSON collection.</td>
           </tr>
-        </tbody>
-      </table>
+          <tbody>
+</table>
+<p class="sultext"><%= link_to "See Full Spec", static_pages_queryapi_path %></p>
 
-
+  
 
 
 
