--- a/app/views/static_pages/pubsapi.html.erb
+++ b/app/views/static_pages/pubsapi.html.erb
@@ -177,11 +177,14 @@
 <hr style="color:#000;background-color:#000;border-color:#000"/>
 <h2 style="font-size:medium">Sample BibJSON</h2>
 
-<p style="font-size:small"><%= link_to "See Single BibTex record for POST", sul_bib_api_samples_path + '/get_pub_out' %> </p>
+<p style="font-size:small"><%= link_to "See Single BibJSON record for POST", sul_bib_api_samples_path + '/post_pub_in_json' %> </p>
 
-<p style="font-size:small"><%= link_to "See BibJSON collection for POST", sul_bib_api_samples_path + '/get_pub_out' %> </p>
+<p style="font-size:small"><%= link_to "See Single BibTex record for POST", sul_bib_api_samples_path + '/post_pub_in_bibtex' %> </p>
 
-<p style="font-size:small"><%= link_to "See Multiple BibTex recordsfor POST)", sul_bib_api_samples_path + '/get_pub_out' %> </p>
+<p style="font-size:small"><%= link_to "See BibJSON collection for POST", sul_bib_api_samples_path + '/post_pubs_in_json' %> </p>
+
+<p style="font-size:small"><%= link_to "See Multiple BibTex recordsfor POST)", sul_bib_api_samples_path + '/post_pubs_in_bibtex' %> </p>
+
 
 <hr style="color:#000;background-color:#000;border-color:#000"/>
 <h2 style="font-size:medium">Sample CURL calls</h2>
