--- a/app/views/static_pages/queryapi.html.erb
+++ b/app/views/static_pages/queryapi.html.erb
@@ -153,10 +153,10 @@
       </table>
 
 <hr style="color:#000;background-color:#000;border-color:#000"/>
-<h2 style="font-size:medium">Sample BibJSON</h2>
+<h2 style="font-size:medium">Sample Data</h2>
 
 
-<p style="font-size:small"><%= link_to "See BibJSON collection from GET", sul_bib_api_samples_path + '/get_pub_out' %> </p>
+<p style="font-size:small"><%= link_to "See BibJSON collection from GET", sul_bib_api_samples_path + '/get_pubs_out' %> </p>
 
 
 <hr style="color:#000;background-color:#000;border-color:#000"/>
