small syntax fix

--- a/app/views/static_pages/pubapi.html.erb
+++ b/app/views/static_pages/pubapi.html.erb
@@ -219,9 +219,9 @@
 
 <p style="font-size:small"><%= link_to "See Single BibJSON record (from GET or PUT)", sul_bib_api_samples_path + '/get_pub_out' %> </p>
 
-<p  style="font-size:small"><%= link_to "See Single BibJSON record (for PUT)", sul_bib_api_samples_path + '/put_pub_in_json' %> </p>
+<p  style="font-size:small"><%= link_to "See Single BibJSON record (for PUT)", sul_bib_api_samples_path + '/put_pub_in_json' %> (Not yet available.)</p>
 
-<p style="font-size:small"><%= link_to "See Single BibTex record (for PUT)", sul_bib_api_samples_path + '/put_pub_in_bibtex' %> </p>
+<p style="font-size:small"><%= link_to "See Single BibTex record (for PUT)", sul_bib_api_samples_path + '/put_pub_in_bibtex' %> (Not yet available.)</p>
 
 <hr style="color:#000;background-color:#000;border-color:#000"/>
 <h2 style="font-size:medium">Sample CURL calls</h2>
