very large commit

--- a/app/views/static_pages/api.html.erb
+++ b/app/views/static_pages/api.html.erb
@@ -7,7 +7,7 @@
 <hr style="color:#000;background-color:#000;border-color:#000"/>
 
 
-<h5 style="padding-bottom:10px;text-align:left;">http://sulcap.stanford.edu/publications/{pubId}</h5>
+<h5 style="padding-bottom:10px;text-align:left;">http://sulcap.stanford.edu/publications/{sulPubId}</h5>
 <p class="sultext">View, update, or delete a single publication resource.</p>
 <table class="table table-striped">       
         <tbody>
