removed debugger require

--- a/app/views/static_pages/api.html.erb
+++ b/app/views/static_pages/api.html.erb
@@ -77,8 +77,8 @@
 <hr style="color:#000;background-color:#000;border-color:#000"/>
 
 
-<h5 style="padding-bottom:10px;text-align:left">http://sulcap.stanford.edu/sourcelookup?lastname={}&firstname={}&middlename={}&year={}&title={}&source={}</h5>
-<p class="sultext">Returns all matching publications from remote sources (ScienceWire only initially.)</p>
+<h5 style="padding-bottom:10px;text-align:left">http://sulcap.stanford.edu/sourcelookup?year={}&title={}&source={}</h5>
+<p class="sultext">Returns all matching publications from remote sources or from users' locally submitted publications.  The 'source' param may have values 'SW' or 'MAN' or both: 'SW+MAN'.  If no source value is provided all sources will be searched (Sciencewire and local.)</p>
 <table class="table table-striped">       
         <tbody>
           <tr>
