implented post and other changes

--- a/app/views/static_pages/pollapi.html.erb
+++ b/app/views/static_pages/pollapi.html.erb
@@ -4,7 +4,37 @@
 
 <b style="font-size:large">http://sulcap.stanford.edu/publications?population={popId}&changedSince={YYYY-MM-DDTHH:MM:SSZ}</b>
 
+<hr style="color:#000;background-color:#000;border-color:#000"/>
 
+<h2 style="font-size:medium">URL Parameters</h2>
+
+<table class="table table-striped">       
+        <tbody>
+          <thead>
+          <tr>
+            <th>Parameter Name</th>
+            <th>Description</th>
+            <th>Allowable Values</th>
+            <th>Required?</th>
+            <th>Default Value</th>
+          </tr>
+        </thead>
+          <tr>
+            <td>popId</td>
+            <td>Predefined subset of authors from which to draw.</td>     
+            <td>CAP</td>
+            <td>No</td>  
+            <td>N/A</td>     
+          </tr>
+          <tr>
+            <td>changedSince</td>
+            <td>All pubs changed since.</td>
+            <td>ISO 8601 Date</td>
+            <td>No</td>   
+            <td>1000-01-01</td>            
+          </tr>
+          <tbody>
+</table>
 
 <hr style="color:#000;background-color:#000;border-color:#000"/>
 
