--- a/app/views/static_pages/pubsapi.html.erb
+++ b/app/views/static_pages/pubsapi.html.erb
@@ -25,9 +25,9 @@
           </tr>
           <tr>
             <td>POST</td>
-            <td>Updates publication record.</td>
-            <td>Full BibJSON or BibTeX record to update publication.</td>
-            <td>BibJSON for successfully updated pubication.</td>
+            <td>Creates publication record.</td>
+            <td>Full BibJSON or BibTeX record for publication(s).</td>
+            <td>BibJSON for successfully updated pubication(s).</td>
           </tr>
           <tbody>
 </table>
