added pubmed abstract as public viewable

--- a/app/views/static_pages/api.html.erb
+++ b/app/views/static_pages/api.html.erb
@@ -55,7 +55,7 @@
 <hr style="color:#000;background-color:#000;border-color:#000"/>
 
 
-<h5 style="padding-bottom:10px;text-align:left">http://sulcap.stanford.edu/publications?population={popId}&changedSince={YYYY-MM-DDTHH:MM:SSZ}</h5>
+<h5 style="padding-bottom:10px;text-align:left">http://sulcap.stanford.edu/publications?population={popId}&changedSince={YYYY-MM-DDTHH:MM:SSZ}&capProfileId={capId}</h5>
 <p class="sultext">Returns all publications created or modified since the given date, for the given population.</p>
 <table class="table table-striped">       
         <tbody>
