--- a/app/views/static_pages/pubapi.html.erb
+++ b/app/views/static_pages/pubapi.html.erb
@@ -162,6 +162,12 @@
             <td>None</td>
           </tr>  
           <tr>
+            <td>403</td>
+            <td>Forbidden</td>
+            <td>PUT, DELETE</td>
+            <td>None</td>
+          </tr>            
+          <tr>
             <td>404</td>
             <td>Not Found</td>
             <td>GET, PUT, DELETE, HEAD, OPTIONS</td>
