fixed citation generation for parsed names and multiple years.

--- a/app/views/static_pages/pubsapi.html.erb
+++ b/app/views/static_pages/pubsapi.html.erb
@@ -124,10 +124,16 @@
             <td>BibJSON for new record(s)</td>
           </tr>    
           <tr>
+            <td>303</td>
+            <td>See Other - duplicate post</td>
+            <td>POST</td>
+            <td>error indicating this is a duplicate post</td>
+          </tr>  
+          <tr>
             <td>400</td>
             <td>Bad Request</td>
             <td>POST</td>
-            <td>Message: Invalid BibJSON or BibTeX</td>
+            <td>Message: Invalid BibJSON </td>
           </tr>  
           <tr>
             <td>401</td>
